# denet

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  PROGRESS.md  README.md  TDD-CLI-PLAN.md  WORKPLAN.RUST.md  build.rs  codecov.yml  flake.nix  pyproject.toml
.github/workflows/: conda-release.yml  publish.yml  test.yml
conda-recipes/denet/: build.cmd  build.sh  recipe.yaml
docs/: aya_bpf_notes.md  data-format.md  dev.md  disk-io.md  ebpf.md  ebpf_troubleshooting.md  gpu.md  offcpu-stack.md  offcpu.md  portability.md  python-api.md  stack_trace_symbolication.md
docs/examples/: simple_stack_test.rs  test_debug_symbols.rs
docs/examples/debugging/: test_func.c  test_stack_fixes.sh
examples/: debug_symbolication.rs  offcpu_basic.rs
examples/debugging/: setup_permissions.sh
python/denet/: __init__.py  analysis.py
scratchpad/: TODO.md
scripts/: README.md  build_and_install.sh  setup_ebpf_caps.sh  simple_child_test.py  stress_gpu.py  test_child_processes.py  update_version.sh  validate_metrics.py
src/: config.rs  core.rs  cpu_sampler.rs  error.rs  lib.rs  process_monitor.rs  python.rs
src/core/: mod.rs  monitoring_utils.rs  process_monitor.rs
src/ebpf/: README.md  memory_map_cache.rs  metrics.rs  mod.rs  offcpu_profiler.rs  syscall_tracker.rs
src/ebpf/include/bpf/: UPSTREAM.md
src/ebpf/programs/: offcpu_profiler.c  syscall_tracer.c
src/gpu/: mod.rs
src/monitor/: env.rs  metrics.rs  mod.rs  record.rs  summary.rs
src/perf/: mod.rs  syscall.rs
src/psi/: mod.rs
src/symbolication/: mod.rs
tests/: README.md  cli_tests.rs  config_tests.rs  conftest.py  cpu_sampler_tests.rs  cpu_stress_test.rs  disk_io_test.rs  env_tests.rs  error_handling_tests.rs  error_tests.rs  lib_tests.rs  metadata_tests.rs  monitoring_integration_tests.rs  test_process_monitor.py  test_summary.py  thread_aggregation_regression.rs
tests/cli/: test_args.py
tests/integration/: main.rs  offcpu_metrics_tests.rs  offcpu_profiler_test.rs
tests/python/: run_analysis_tests.py  test_adaptive_sampling.py  test_analysis.py  test_analysis_manually.py  test_convenience.py  test_execute_with_monitoring.py  test_helpers.py  test_integration.py  test_legacy_compatibility.py  test_manually.py  test_monitor_api.py  test_process_monitor.py  test_summary_api.py
