[package]
name = "pmet"
version = "0.1.0"
edition = "2021"

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
sysinfo = { version = "0.29.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.18", features = ["extension-module", "auto-initialize"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
once_cell = "1.18"

