[build-system]
requires = ["maturin>=1.8.6,<2.0"]
build-backend = "maturin"

[tool.pixi.project]
name = "pmet"
version = "0.1.0"
channels = ["conda-forge", "pypi"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "==3.12"
maturin = "==1.8.6"
pytest = ">=7.0.0"

[tool.pixi.tasks]
build = { cmd = "maturin build --release" }
develop = { cmd = "./scripts/build_and_install.sh" }
test = { cmd = "python -m pytest tests/" }
test-rust = { cmd = "cargo test --no-default-features" }
test-all = { cmd = "cargo test --no-default-features && ./scripts/build_and_install.sh && python -m pytest tests/" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
