[build-system]
requires = ["maturin>=1.8.3,<2.0"]
build-backend = "maturin"

[project]
name = "denet"
version = "0.1.1"
description = "A streaming process monitoring tool"
readme = "README.md"
authors = [{ name = "btraven00" }]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.pixi.project]
name = "denet"
version = "0.1.1"
channels = ["conda-forge", "pypi"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "==3.12"
maturin = "==1.8.6"
pytest = ">=7.0.0"

[tool.pixi.tasks]
build = { cmd = "maturin build --release" }
publish-pypi = { cmd = "maturin publish --skip-existing" }
develop = { cmd = "./scripts/build_and_install.sh" }
test = { cmd = "python -m pytest tests/python/" }
test-rust = { cmd = "cargo test --no-default-features" }
test-all = { cmd = "cargo test --no-default-features && python -m pytest tests/python/" }
test-ci = { cmd = "cargo test --no-default-features && python -m pytest tests/python/" }
coverage = { cmd = "cargo llvm-cov --lib --no-default-features --html -- --skip test_from_pid --skip test_process_metadata" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.maturin]
python-source = "python"
module-name = "denet._denet"
features = ["python"]
